--- a/environment.yml
+++ b/environment.yml
@@ -8,7 +8,8 @@ dependencies:
   - python=3.7   
   - pip
   - pytorch-cpu
-  - Sklearn
-  - Scikit-Image
+  - scikit-learn
+  - scikit-image
   - cvxpy
   - h5py
+  - tqdm
